crates/serde-feather/tests/ui/tuple_struct.stderr
error: duplicate wire enum variant name `dup` in deserialization; conflicts with variant `Circle`
 --> tests/ui/tuple_struct.rs:7:22
  |
7 |     #[serde(rename = "dup")]
  |                      ^^^^^
