crates/serde-feather/tests/ui/tuple_struct.rs
use serde_feather::FeatherDeserialize;

#[derive(FeatherDeserialize)]
enum Shape {
    #[serde(alias = "dup")]
    Circle,
    #[serde(rename = "dup")]
    Square,
}

fn main() {}
